--- a/src/Components/Track/Track.css
+++ b/src/Components/Track/Track.css
@@ -22,11 +22,12 @@
     flex-grow: 1;
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    height: 72px;
+    justify-content: space-between;
+    height: 115px;
   }
   
   .Track-information h3 {
+    margin-top: .50rem;
     margin-bottom: .22rem;
   }
   
@@ -34,4 +35,8 @@
     font-size: .83rem;
     font-weight: 300;
     color: rgba(256, 256, 256, 0.8);
+  }
+
+  .Track-information audio{
+    margin-bottom: .40rem;
   }
